After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743217 - place: Fix workspace check when collecting relevant windows
place: Fix workspace check when collecting relevant windows
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2015-01-19 23:00 UTC by Florian Müllner
Modified: 2015-01-19 23:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
place: Fix workspace check when collecting relevant windows (1.16 KB, patch)
2015-01-19 23:00 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2015-01-19 23:00:30 UTC
Just filing for bug reference.
Comment 1 Florian Müllner 2015-01-19 23:00:34 UTC
Created attachment 294932 [details] [review]
place: Fix workspace check when collecting relevant windows

When looking for space to place a new window, other non-minimized
windows on the same workspace should be taken into account. However
the current check does not work correctly when the placed window is
located on all workspaces, so handle that case explicitly.
Comment 2 Florian Müllner 2015-01-19 23:01:23 UTC
Attachment 294932 [details] pushed as b91461e - place: Fix workspace check when collecting relevant windows